--- a/frontend/src/app/feature/timesheets/timesheets.component.css
+++ b/frontend/src/app/feature/timesheets/timesheets.component.css
@@ -277,12 +277,6 @@
   letter-spacing: 0.5px;
 }
 
-.time-display {
-  font-size: 28px;
-  font-weight: bold;
-  color: #000000;
-  letter-spacing: 2px;
-}
 
 .time-counter.idle {
   background: #fff8e1;
@@ -348,7 +342,7 @@
   align-items: center;
 }
 
-.start, .sessions, .total {
+.start, .total {
   background: #f5f5f5;
   padding: 6px 10px;
   border-radius: 4px;
@@ -396,10 +390,12 @@
 
 /* ===== TIMESHEET CARDS ===== */
 .timesheets-cards {
+  margin-left: 30px;
   display: flex;
   flex-direction: column;
   gap: 20px;
   margin-bottom: 30px;
+  width:950px
 }
 
 .timesheet-card {
@@ -416,27 +412,29 @@
 }
 
 /* Card Header: Times */
+
 .card-header {
-  background: #f8f9fa;
-  padding: 15px 20px;
+  background: white;
+  padding: 16px 15px 15px 16px;
   border-bottom: 1px solid #e0e0e0;
 }
 
 .time-info {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
-  gap: 30px;
+  gap: 550px;
 }
 
-.start-time, .end-time, .duration {
+.start-time, .end-time {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-width: 180px;
 }
 
 .start-time .label, .end-time .label {
-  font-size: 11px;
+  font-size: 12px;
   font-weight: 700;
   color: #666;
   text-transform: uppercase;
@@ -444,17 +442,16 @@
   margin-bottom: 4px;
 }
 
-.start-time .value, .end-time .value, .duration .value {
-  font-size: 16px;
+.start-time .value, .end-time .value {
+  font-size: 12px;
   font-weight: 600;
   color: #333;
   font-family: 'Courier New', monospace;
+  white-space: nowrap;
+  overflow: visible;
+  text-overflow: clip;
 }
 
-.duration .value {
-  color: #14c184;
-  font-size: 18px;
-}
 
 /* Activity Container */
 .activity-container {
