--- a/frontend/src/app/feature/activity/activity.component.css
+++ b/frontend/src/app/feature/activity/activity.component.css
@@ -1,8 +1,16 @@
+:host {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  width: 100%;
+}
 .activity-card {
   height: 430px;
   width: 520px;
   padding: 34px;
   box-shadow: 0 18px 40px rgba(0, 0, 0, 0.08); /* container shadow */
+
 }
 
 
